# m3-astra-sim

./: README.md  common.h  config.txt  fct.txt  fct_astra_sim.txt  fct_to_flowsim.py  m3_api.py  tmp.yaml  to_fct_flowsim.py  to_flowsim_fct.py
network_frontend/ns3/: AstraSimNetwork.cc  entry.h
scratch/: CMakeLists.txt  common.h
scratch/config/: config.txt  config_clos.txt
scratch/output/: fct.txt  flow_paths.txt  mix.tr
scratch/topology/: 128_nodes_32_switch_topology.txt
traces_8/: one_comm_coll_node_allreduce.0.et  one_comm_coll_node_allreduce.1.et  one_comm_coll_node_allreduce.2.et  one_comm_coll_node_allreduce.3.et  one_comm_coll_node_allreduce.4.et  one_comm_coll_node_allreduce.5.et  one_comm_coll_node_allreduce.6.et  one_comm_coll_node_allreduce.7.et
